Fix shit gif dead.
wtgf

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://cdn.discordapp.com/attachments/1312822462089789611/1325819925033521192/16.gif?ex=6796e2c6&is=67959146&hm=00edc5c0f7e38df1a9169888081ee54dc8fec6fad36a3d1533149b0ed0053a93&" alt="..." /></div>
+                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://media.discordapp.net/attachments/476667884559400961/1333253043977850910/16.gif?ex=67983828&is=6796e6a8&hm=0cda961615cd7f267e6e5a3c70bd3d56023d5c095b0a7831d974d4932be88d26&" alt="..." /></div>
                     </div>
                 </div>
             </header>
