add boss and more details

--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                 <li><a class="dropdown-item" href="https://dada878.com">冰川（陳威達）- 領導人</a></li>
                                 <li><a class="dropdown-item" href="https://www.osga.lol">Osga（黃宥睿）- 技術總監</a></li>
-                                <li><a class="dropdown-item" href="https://yudong-0222.github.io">Yudong（吳覲宇） - 主要開發者</a></li>
-                                <li><a class="dropdown-item" href="https://youtong0826.github.io">Youtong（董宥彤） - 協助開發 / 馬桶測試員</a></li>
+                                <li><a class="dropdown-item" href="https://yudong-0222.github.io">Yudong（吳覲宇） -
+                                        主要開發者</a></li>
+                                <li><a class="dropdown-item" href="https://youtong0826.github.io">Youtong（董宥彤） - 技術協助，「哇勒」 白金級馬桶測試員</a></li>
+                                <li><a class="dropdown-item" href="https://4yu.dev">4yu 老大（黃士育）-「哇勒個騷肛」 人工智慧馬桶評比總負責人
+                                        </a></li>
                             </ul>
                         </li>
                     </ul>
@@ -87,21 +90,21 @@
             <div class="container px-5 my-5">
                 <div class="row gx-5">
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h2 class="fw-bolder mb-0">一個更好的路可以拉｛屎｝</h2>
+                        <h2 class="fw-bolder mb-0">一個更好的路可以拉「屎」</h2>
                     </div>
                     <div class="col-lg-8">
                         <div class="row gx-5 row-cols-1 row-cols-md-2">
                             <div class="col mb-5 h-100">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
                                         class="bi bi-collection"></i></div>
-                                <h2 class="h5">大便未來</h2>
-                                <p class="mb-0">文字敘述的大便</p>
+                                <h2 class="h5">絕佳的大便機會</h2>
+                                <p class="mb-0">刷馬桶的機會，只有你能掌握。</p>
                             </div>
                             <div class="col mb-5 h-100">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
                                         class="bi bi-building"></i></div>
-                                <h2 class="h5">未來大便</h2>
-                                <p class="mb-0">我會在大學四年好好大便.</p>
+                                <h2 class="h5">無可限量的「便」利</h2>
+                                <p class="mb-0">一起拉屎，成就非凡。</p>
                             </div>
                             <div class="col mb-5 mb-md-0 h-100">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
